--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<h2><a href="#">Coffee Shop Sales Dashboard<br />
+										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Designed and implemented a relational database model using Power BI, leveraging measures, calculated columns, and DAX. This interactive and user-friendly dashboard simplifies complex sales data, enabling dynamic insights and informed decision-making.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
