--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">Coffee Shop Sales Dashboard<br />
+										<h2><a href="https://github.com/ahmadessasiddiqui/Coffee-shop-sales-dashboard">Coffee Shop Sales Dashboard<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="https://github.com/ahmadessasiddiqui/Coffee-shop-sales-dashboard" class="image fit"><img src="images/Coffee Dashboard.png" alt="" /></a>
 									<p>Designed and implemented a relational database model using Power BI, leveraging measures, calculated columns, and DAX. This interactive and user-friendly dashboard simplifies complex sales data, enabling dynamic insights and informed decision-making.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/ahmadessasiddiqui/Coffee-shop-sales-dashboard" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
