--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										
+										<h2><a href="https://github.com/ahmadessasiddiqui/Loan-Prediction">Loan Prediction<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/ahmadessasiddiqui/Loan-Prediction" class="image fit"><img src="images/Lp.jpg" alt="" /></a>
+									<p>Cleaned and preprocessed data by handling missing values, normalizing features, and applying one-hot encoding. After splitting the data into training and testing sets, I tested multiple machine learning algorithms to identify the best-performing model.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/ahmadessasiddiqui/Loan-Prediction" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
